--- a/TH_LTWeb/TH_LTWeb.csproj
+++ b/TH_LTWeb/TH_LTWeb.csproj
@@ -468,7 +468,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\GioHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NguoidungController.cs" />
     <Compile Include="Controllers\SachOnlineController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -479,6 +481,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dbSachOnline.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Models\GioHang.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -486,12 +489,14 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="CSS\index.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\130318.jpg" />
     <Content Include="Images\130499.jpg" />
+    <Content Include="Images\Giohang.gif" />
     <Content Include="Images\Gt_Thcb.jpg" />
     <Content Include="Images\Kt.jpg" />
     <Content Include="Images\KT0001.jpg" />
@@ -503,12 +508,14 @@
     <Content Include="Images\KT0007.jpg" />
     <Content Include="Images\KT0008.jpg" />
     <Content Include="Images\KT0009.jpg" />
+    <Content Include="Images\search.png" />
     <Content Include="Images\Slider\01.jpg" />
     <Content Include="Images\Slider\02.jpg" />
     <Content Include="Images\Slider\03.jpg" />
     <Content Include="Images\Slider\04.jpg" />
     <Content Include="Images\Slider\05.jpg" />
     <Content Include="Images\Slider\06.jpg" />
+    <Content Include="Images\Slider\search.png" />
     <Content Include="Images\TH004.jpg" />
     <Content Include="Images\TH005.jpg" />
     <Content Include="Images\TH006.jpg" />
@@ -562,6 +569,10 @@
     <Content Include="Views\SachOnline\ChiTietSach.cshtml" />
     <Content Include="Views\User\DangKy.cshtml" />
     <Content Include="Views\User\DangNhap.cshtml" />
+    <Content Include="Views\Nguoidung\Dangky.cshtml" />
+    <Content Include="Views\Nguoidung\Dangnhap.cshtml" />
+    <Content Include="Views\GioHang\GioHang.cshtml" />
+    <Content Include="Views\GioHang\GioHangPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
